--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,8 +1,8 @@
-import path from 'path';
+const path = require('path');
 
 module.exports = {
-  config: path.resolve('src/db', 'sequelize.config.js'),
-  'models-path': path.resolve('src/db', 'models'),
-  'seeders-path': path.resolve('src/db', 'seeders'),
-  'migrations-path': path.resolve('src/db', 'migrations'),
+  config: path.resolve('db', 'sequelize.config.mjs'),
+  'models-path': path.resolve('db', 'models'),
+  'seeders-path': path.resolve('db', 'seeders'),
+  'migrations-path': path.resolve('db', 'migrations'),
 };
