--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "migration:create": "dotenv -- sequelize-cli migration:create",
     "migrate": "dotenv -- sequelize-cli db:migrate",
-    "migrate:rollback": "dotenv -- sequelize-cli db:migrate:undo",
-    "migrate:rollback:all": "dotenv -- sequelize-cli db:migrate:undo:all"
+    "migrate:undo": "dotenv -- sequelize-cli db:migrate:undo",
+    "migrate:undo:all": "dotenv -- sequelize-cli db:migrate:undo:all"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
