create seeds and fill seed

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "migration:create": "dotenv -- sequelize-cli migration:create",
     "migrate": "dotenv -- sequelize-cli db:migrate",
     "migrate:undo": "dotenv -- sequelize-cli db:migrate:undo",
-    "migrate:undo:all": "dotenv -- sequelize-cli db:migrate:undo:all"
+    "migrate:undo:all": "dotenv -- sequelize-cli db:migrate:undo:all",
+    "seeds:all": "dotenv -- sequelize-cli db:seed:all"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
