--- a/package.json
+++ b/package.json
@@ -30,14 +30,17 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/mapped-types": "*",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/sequelize": "^11.0.0",
     "@sequelize/postgres": "7.0.0-alpha.45",
     "@types/bcrypt": "^5.0.2",
+    "@types/passport-jwt": "^4.0.1",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
     "dotenv-cli": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "sequelize": "^6.37.5",
