--- a/package.json
+++ b/package.json
@@ -33,10 +33,11 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/sequelize": "^11.0.0",
+    "@nestjs/typeorm": "^11.0.0",
     "@sequelize/postgres": "7.0.0-alpha.45",
     "@types/bcrypt": "^5.0.2",
     "@types/passport-jwt": "^4.0.1",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "dotenv": "^16.4.7",
     "dotenv-cli": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
@@ -45,7 +46,8 @@
     "rxjs": "^7.8.1",
     "sequelize": "^6.37.5",
     "sequelize-cli": "^6.6.2",
-    "sequelize-typescript": "^2.1.6"
+    "sequelize-typescript": "^2.1.6",
+    "typeorm": "^0.3.21"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
