--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@nestjs/sequelize": "^11.0.0",
     "@sequelize/postgres": "7.0.0-alpha.45",
     "@types/bcrypt": "^5.0.2",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "dotenv": "^16.4.7",
     "dotenv-cli": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
